# pico-micropython-dynamic

./: CMakeLists.txt  init.c  module.cpp
